code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/CostImpactV3.md
# FactSet.SDK.BestExecutionAnalyticsforSmarterTradingBEAST.Model.CostImpactV3
The Cost Impact V3 object

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Strategy** | **string** | Strategy | [optional] 
**RiskAversion** | **double** | RiskAversion | [optional] 
**MarketImpactStatus** | **string** | MarketImpactStatus | [optional] 
**Message** | **string** | Message | [optional] 
**CostPerShare** | **double** | Cost Per Share | [optional] 
**CostPerShareBps** | **double** | Cost Per Share Bps | [optional] 
**MarketImpact** | **double** | Market Impact | [optional] 
**ConfidenceInterval** | **double** | Confidence Interval | [optional] 
**ConfidenceIntervalBps** | **double** | Confidence Interval Bps | [optional] 
**LiquidityCostPerShare** | **double** | Liquidity Cost Per Share | [optional] 
**SpreadCostPerShare** | **double** | Spread Cost Per Share | [optional] 
**LiquidityCostPerShareBps** | **double** | Liquidity Cost Per Share Bps | [optional] 
**SpreadCostPerShareBps** | **double** | Spread Cost Per Share Bps | [optional] 
**OutputStrategyBinDataDtoList** | [**List&lt;OutputStrategyBinData&gt;**](OutputStrategyBinData.md) | Output Strategy Bin Data List | [optional] 

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

